fixed note and note list styling and functionality with htmlContent vs notes, enabled my version of voice transcription for testing on mobile, fixed checks for if notes were edited

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,8 @@
   --dash-h1-color: rgb(0, 0, 0);
   --modal-color: #ede6d6;
   --question-block-bg: #f4e5c0c5;
+  --editor: white;
+  --editor-btn-bg: #ededed;
 }
 
 .dark {
@@ -22,6 +24,8 @@
   --dash-h1-color: rgb(255, 255, 255);
   --modal-color: rgba(56, 55, 55, 0.845);
   --question-block-bg: #451b03;
+  --editor: #111;
+  --editor-btn-bg: #2a2a2a;
 }
 
 html,
